Updates from Overleaf

--- a/NuId-Ch3/NeutrinoID.tex
+++ b/NuId-Ch3/NeutrinoID.tex
@@ -63,7 +63,7 @@ Further details on the \texttt{SliceID} tool are available in DocDB 23854 and 22
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{NuId-Ch3/Images/efficiency_cat_0.pdf}
+    \includegraphics[width=0.85\textwidth]{NuId-Ch3/Images/sliceID.pdf}
     \caption{The performance of the \texttt{SliceID} as a function of the true neutrino energy for the topologies considered in the $\nu_e$ selection: the \npsel (left), the  \zpsel (middle) and inclusive (right) channels.}
     \label{fig:sliceid}
 \end{figure}
