--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -39,7 +39,7 @@ At this stage, the efficiency of the selection is 46\% for $\nu_e$ CC events ins
 
 After the pre-selection cuts, the $\nu_e$ CC purity is still low. Figure \ref{fig:pre_shower_E_pdg} shows the distribution of the angles of the electron candidate shower highlighting the dominant background categories: the main background is coming from events with $\pi^0$ in the final state. Thus, $e/\gamma$ separation becomes key to the $\nu_e$ CC inclusive selection.
 
-\cref{fig:e_cand_Calo} shows the agreement in the kinematics of the electron candidate shower at the preselection stage. \emph{As seen in several other Data-MC comparisons of calorimetry variables throughout this note, a slight disagreement is found in the shower candidate energy, to be re-evaluated after the planned MC re-calibration.}
+\cref{fig:e_cand_Calo} shows the agreement in the kinematics of the electron candidate shower at the pre-selection stage. \emph{As seen in several other Data-MC comparisons of calorimetry variables throughout this note, a slight disagreement is found in the shower candidate energy, to be re-evaluated after the planned MC re-calibration.}
 
 
 \begin{figure}[h]
