--- a/Tech-Ch1/Tech.tex
+++ b/Tech-Ch1/Tech.tex
@@ -1,15 +1,15 @@
-Before we dive into the physics, we take a moment to layout a some technical details, common conventions and acronyms used throughout the note, with the hope to help the reader through the note's interpretation.
+Before we dive into the physics, we take a moment to lay out some technical details, common conventions, and acronyms used throughout this note. This is intended to help the reader through the note's interpretation.
 %\addcontentsline{toc}{Section}{echnical Overview on the Content of this Note}
 \subsection{Samples}
-\par This analysis attempts to use all the latest available data and simulation samples for the MicroBooNE LEE analysis. This section briefly describes what samples are used.
-\par MicroBooNE's collected dataset passing  data-quality requirements for the LEE analysis consists of $10.1E20$ POT of BNB data taken over four Runs. %This number takes into account run periods discarded due to data-quality requirements. 
+\par This analysis attempts to use all the latest available data and simulation samples for the MicroBooNE LEE analysis. This section briefly describes which samples are used.
+\par MicroBooNE's collected dataset passing  data-quality requirements for the LEE analysis consists of 10.1E20 POT of BNB data taken over four ``runs'', or data taking periods. %This number takes into account run periods discarded due to data-quality requirements. 
 Only small subsets of this data is available for analyzers to use, i.e. :
 \begin{itemize}
 \item[-] On-beam data (\textbf{BNB}):
 \begin{itemize}
 \item ``5E19'' POT Run1 open dataset (4.07E19 POT after quality cuts)
 \item  ``1E19'' POT Run3 open dataset  (0.8E19 POT after quality cuts) 
-\item  $\sim3.0E20$ POT of filtered $\pi^0$ data from Runs 1 and 3. 
+\item  $\sim3.0$E20 POT of filtered $\pi^0$ data from Runs 1 and 3. 
 \end{itemize}
 \item[-] Off-beam data (\textbf{EXT}):
 \begin{itemize}
@@ -28,12 +28,12 @@ Only small subsets of this data is available for analyzers to use, i.e. :
 %For on-beam data, three samples are used in this note: the ``5E19'' Run1 open dataset ($4.07E19$ POT after quality cuts), the ``1E19'' ($0.8E19$ POT after quality cuts) open Run3 data, and the $\sim3.0E20$ POT of filtered $\pi^0$ data from runs 1 and 3. 
 %For off-beam data, this analysis uses all available samples from Run1 and Run3, consisting of roughly 1 million events for each run. 
 
-Scaling factors for the EXT datasets to match the full $10.1E20$ POT are $\times3.5$ and $\times2.1$ for Run1 and Run3 respectively. The fact that EXT samples need to be scaled up rather then down is a consequence of the lack of availability of off-beam events, a generally recognized problem with all LEE analyses which may make EXT background estimation difficult and hamper sensitivity estimates.
+Scaling factors for the EXT datasets to match the full 10.1E20 POT are $\times3.5$ and $\times2.1$ for Run1 and Run3 respectively. The fact that EXT samples need to be scaled up rather then down is a consequence of the lack of availability of off-beam events. This is a generally recognized problem with all LEE analyses and may make EXT background estimation difficult and hamper sensitivity estimates.
 \par %All MC samples used are from ``overlay datasets''. For each run period, MC datasets are produced for the standard MC BNB flux prediction (``MC'' sample, $\sim1E21$ POT), a $\nu_e$ intrinsic sample simulating only $\nu_e$ neutrinos from the standard MicroBooNE flux prediction (\emph{$\nu_e$ intrinsic}, $\sim5E22$ POT), a sample of \emph{dirt} interactions (neutrinos which interact outside of the cryostat, $\sim3E20$ POT), and samples filtered by final-state topology for CC $\pi^0$ and NC $\pi^0$ channels ($\sim2-3E21$ POT). 
-All simulation samples in addition to the generic ``MC'' are used to boost statistics in channels that are sub-dominant in event rate but important for this analysis. In merging these samples in the analysis, we take care to remove the same events from the ``MC'' samples and weigh the high-stats special samples appropriately. 
-Even with this workflow, the statistics of several background categories is not sufficient for a careful evaluation of their impact on the selection, leading to large bin-by-bin fluctuations in expected events and therefore an unclear background estimation. To mitigate this, specific targeted truth-based filters have been developed (see DocDB 27409~\cite{bib:truthfilters}) to boost statistics in backgrounds for which current statistics are not sufficient. 
+All simulation samples, in addition to the generic ``MC'' are used to boost statistics in channels that are sub-dominant in event rate but important for this analysis. In merging these samples in the analysis, we take care to remove the same events from the ``MC'' samples and weigh the special high-statistic samples appropriately. 
+Even with this workflow, the statistics of several background categories are not sufficient for a careful evaluation of their impact on the selection. This leads to large bin-by-bin fluctuations in the expected events and therefore an unclear background estimation. To mitigate this, specific targeted truth-based filters have been developed (see DocDB 27409~\cite{bib:truthfilters}) to boost statistics in backgrounds for which the current statistics are not sufficient. 
 
-\subsection{How to read plots in this tech-note} A large fraction of plots in this note are data-simulation comparison. This paragraph describes common features for these plots. All data-simulation comparisons up to Chapter~\ref{sec:systematics} show statistical errors only, denoted with error-bars for data. The statistical error on MC samples is denoted with a grey band. All plots, unless otherwise labeled, are POT normalized, following the procedure outlined in DocDB 15204~\cite{bib:POTscaling}. Data-simulation comparisons are accompanied by a legend which denotes the various event categories shown. Categories are described below:
+\subsection{How to read plots in this note} A large fraction of plots in this note are data-simulation comparisons. This paragraph describes common features for these plots. All data-simulation comparisons up to Chapter~\ref{sec:systematics} show statistical errors only, denoted with error-bars for data. The statistical error on MC samples is denoted with a grey band. All plots, unless otherwise labeled, are POT normalized, following the procedure outlined in DocDB 15204~\cite{bib:POTscaling}. Data-simulation comparisons are accompanied by a legend which denotes the various event categories shown. Categories are described below:
 \begin{itemize}
     \item \textbf{BNB}: On-beam contributions (data).
     \item \textbf{EXT}: Off-beam contributions (data).
