--- a/NuId-Ch3/NeutrinoID.tex
+++ b/NuId-Ch3/NeutrinoID.tex
@@ -55,7 +55,7 @@ Further details on the \texttt{SliceID} tool are available in DocDB 23854 and 22
 To select the neutrino slice, we first require a beam-triggered flash in the beam window. 
 Then, we apply the optical pre-selection cuts: if no slice passes optical pre-selection, the event is rejected. 
 If the slice with the largest topological score passes the optical pre-selection, the slice forms the neutrino candidate; otherwise, the slice with the largest flash-matching score forms the neutrino candidate.
-The performance of the \texttt{SliceID} for electron neutrino simulated events is given in~\cref{fig:sliceid}.
+The performance of the \texttt{SliceID} for simulated neutrino events is given in~\cref{fig:sliceid}.
 Integrated over all final states and neutrino energies, the efficiency is:
 \begin{itemize}
     \item $\nu_\mu$ charged-current: \SI{83.0}{\%}
