--- a/Tech-Ch1/Tech.tex
+++ b/Tech-Ch1/Tech.tex
@@ -37,18 +37,18 @@ Even with this workflow, the statistics of several background categories are not
 \begin{itemize}
     \item \textbf{BNB}: On-beam contributions (data).
     \item \textbf{EXT}: Off-beam contributions (data).
-    \item \textbf{Cosmic}: Events from MC overlay where a cosmic instead of a neutrino interaction have been selected as the neutrino candidate by Pandora's \texttt{SliceID}.
+    \item \textbf{Cosmic}: Events from MC overlay where a cosmic instead of a neutrino interaction has been selected as the neutrino candidate by Pandora's \texttt{SliceID}.
     \item \textbf{Out. fid. vol.}: Events from MC overlay where a neutrino was tagged, but the neutrino interaction vertex is outside of the defined TPC fiducial volume.
     \item \textbf{MiniBooNE LEE}: Events from the MB-$\nu_e$ LEE model.
     \item \textbf{$\nu_e$}: CC $\nu_e$ events, split by final state (\zpsel, \npsel, and N$\pi$).
     \item \textbf{$\nu_{\mu}$ CC}: CC muon events with no final state $\pi^0$.
-    \item \textbf{$\pi^0$}: $\nu_{\mu}$ events with final state $\pi^0$ split in NC and CC channels.
+    \item \textbf{$\pi^0$}: $\nu_{\mu}$ events with final state $\pi^0$ split into NC and CC channels.
     \item \textbf{NC}: NC events (all flavors) with no final state $\pi^0$s.
 \end{itemize}{}
 
 \subsection{Tech-note versioning: current status and recent/expected changes }
 Until Neutrino2020, this note is supposed to be a living document: this entails that parts of the analysis will evolve and parts of the text is going to change. Throughout the note, we highlight incomplete parts and known preliminary statements with the use of \emph{italics}.
 
-\par As of January 2020,  all latest samples are used, including the ``GENIE-TUNE CV" weights for work up to the selections development.
+\par As of January 2020,  all of the latest samples are used, including the ``GENIE-TUNE CV" weights for work through the development of the selections.
 For systematic studies, the latest GENIE and flux systematics are used to present truth-level studies, but they are not used for the final sensitivity calculation due to ongoing work in SBNFit to incorporate them.
 %\begin{multicols}{1}
